Don't check ash accelerators in browser with mash.

The chrome browser is crashing when chrome::IsAcceleratorDeprecated() is
called when running mash. This is due to ash::Shell not existing in the
browser process.

The chrome browser process shouldn't be handling ash accelerators in
mash, it should be done by the mus process. Bail out early from the
method if running in mash instead.

BUG=605218

Review URL: https://codereview.chromium.org/1902393003

Cr-Commit-Position: refs/heads/master@{#388807}

Former-commit-id: 5d7c79e257fecde79e9a5f98621a68f283c52198